# HongQuant

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: universe.yaml
dev_conversation/: 2026-04-13-152913-local-command-caveatcaveat-the-messages-below.txt  compact_conversation.txt  resume_context.md  session_name
docs/: investor-fit-notes.md  repo-purpose.md
hongquant/: __init__.py  config.py  logging.py  notify.py  universe.py
hongquant/data/: schema.py  store.py
hongquant/data/adapters/: alpaca.py  ccxt_.py  edgar.py  fred.py  yfinance_.py
hongquant/flows/: daily_equities.py  hourly_crypto.py
plans/: TODO.md  quant_basics.md
ref/: 中国化工产业链.md
tests/: test_schema.py  test_store.py  test_universe.py
